# PowerBlockade

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  PROJECT.md  QUICK_START.md  README.md  RELEASE_AUTOMATION_GUIDE.md  ROADMAP.md  compose.user.yaml.example  compose.yaml  docker-compose.ghcr.yml  docker-compose.yml  pyrightconfig.json
admin-ui/: AGENTS.md  Dockerfile  pyproject.toml  pyrightconfig.json  requirements.txt
admin-ui/alembic/: env.py
admin-ui/alembic/versions/: 0001_init.py  0002_mvp_core.py  0003_blocklists_type.py  0004_forward_zones.py  0005_client_resolver_rules.py  0006_query_rollups.py  0007_settings.py  0008_config_changes.py  0009_event_seq.py  0010_node_metrics.py  0011_client_groups.py  0012_blocklist_schedules.py  0013_blocklist_entries.py  0014_drop_node_event_seq_constraint.py  0015_node_commands.py  0016_node_lifecycle.py  0017_node_metrics_longterm_index.py
admin-ui/app/: csrf.py  main.py  node_auth.py  presets.py  security.py  settings.py  template_utils.py
admin-ui/app/db/: session.py
admin-ui/app/models/: blocklist.py  blocklist_entry.py  client.py  client_group.py  client_resolver_rule.py  config_change.py  dns_query_event.py  forward_zone.py  manual_entry.py  node.py  node_command.py  node_metrics.py  query_rollup.py  settings.py  user.py
admin-ui/app/routers/: analytics.py  audit.py  auth.py  backup.py  blocking.py  blocklists.py  client_groups.py  client_resolver.py  entries.py  forward_zones.py  grafana_proxy.py  help.py  jobs.py  metrics.py  node_sync.py  (+6 more)
admin-ui/tests/: README.md  TEST_PLAN.md  conftest.py
(+161 files in other folders)
